# PeerComparison

./: .gitignore  .replit  11152025  API_ENDPOINT_DOCUMENTATION.md  PeerComparison_11142025  app.py  pyproject.toml  replit.md  requirements.txt  sedK1xwma  test_peercomparison.py
attached_assets/: Pasted-Good-morning-Welcome-to-Morgan-Stanley-s-Third-Quarter-twenty-twenty-five-Earnings-Call-On-behalf--1760580875449_1760580875450.txt
components/: charts.py  company_selector.py  custom_metrics.py  export_reports.py  historical_trends.py  industry_benchmarking.py  metrics_display.py  saved_sets.py
utils/: calculations.py  database.py  financial_data.py
